[gd_scene load_steps=11 format=3 uid="uid://bskvs3ko2utnn"]

[ext_resource type="Script" uid="uid://tcg6bs55hw1w" path="res://main.gd" id="1_aaq20"]
[ext_resource type="Shader" uid="uid://cowsy25kxhkiw" path="res://assets/light_only_group.gdshader" id="2_efxa6"]
[ext_resource type="Theme" uid="uid://cwgp6l14spm0o" path="res://ui/assets/theme.tres" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://c2mhgypppwjb3" path="res://entities/player/player_2d.tscn" id="4_p2fd5"]
[ext_resource type="PackedScene" uid="uid://b2ie68gemry4d" path="res://ui/pick_control.tscn" id="5_7mycd"]
[ext_resource type="PackedScene" uid="uid://bd0q1y40jpa33" path="res://ui/main_v_box_container.tscn" id="6_272bh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dg77c"]
shader = ExtResource("2_efxa6")

[sub_resource type="TileSet" id="TileSet_b0o41"]
tile_size = Vector2i(960, 540)

[sub_resource type="Gradient" id="Gradient_efxa6"]
interpolation_mode = 2
interpolation_color_space = 2
colors = PackedColorArray(0.823529, 0.823529, 0.823529, 1, 0.823529, 0.823529, 0.823529, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0xm2m"]
gradient = SubResource("Gradient_efxa6")
width = 1024
height = 1024
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0.05)
metadata/_snap_count = 20

[node name="Main" type="Node"]
script = ExtResource("1_aaq20")

[node name="CanvasGroup" type="CanvasGroup" parent="."]
material = SubResource("ShaderMaterial_dg77c")

[node name="SectorTileMapLayer" type="TileMapLayer" parent="CanvasGroup"]
unique_name_in_owner = true
enabled = false
tile_set = SubResource("TileSet_b0o41")

[node name="Sectors2D" type="Node2D" parent="CanvasGroup"]
unique_name_in_owner = true

[node name="Enemies2D" type="Node2D" parent="CanvasGroup"]
unique_name_in_owner = true

[node name="StingerEnemies2D" type="Node2D" parent="CanvasGroup"]
unique_name_in_owner = true

[node name="Player2D" parent="." instance=ExtResource("4_p2fd5")]
unique_name_in_owner = true
position = Vector2(15, 10)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player2D"]
remote_path = NodePath("../../Camera2D")
update_rotation = false
update_scale = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(15, 10)
position_smoothing_enabled = true

[node name="BasePointLight2D" type="PointLight2D" parent="Camera2D"]
unique_name_in_owner = true
energy = 0.6
shadow_enabled = true
shadow_color = Color(0, 0, 0, 1)
shadow_filter = 1
shadow_filter_smooth = 1.0
texture = SubResource("GradientTexture2D_0xm2m")
texture_scale = 0.6

[node name="TopPointLight2D" type="PointLight2D" parent="Camera2D"]
energy = 0.3
range_item_cull_mask = 2
shadow_color = Color(0, 0, 0, 1)
shadow_filter = 1
shadow_filter_smooth = 1.0
texture = SubResource("GradientTexture2D_0xm2m")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.0785603, 0.0617619, 0.0932407, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UIControl" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("3_h2yge")

[node name="BlobsHBoxContainer" type="HBoxContainer" parent="CanvasLayer/UIControl"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 10.0
offset_bottom = 10.0

[node name="TurnsVBoxContainer" type="VBoxContainer" parent="CanvasLayer/UIControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -112.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 84.0
grow_horizontal = 0

[node name="TurnLabel" type="Label" parent="CanvasLayer/UIControl/TurnsVBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.870588, 0.545098, 0.435294, 1)
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"NumberLabel"
text = "0"
horizontal_alignment = 2

[node name="PickControl" parent="CanvasLayer/UIControl" instance=ExtResource("5_7mycd")]
unique_name_in_owner = true
layout_mode = 1

[node name="MainVBoxContainer" parent="CanvasLayer/UIControl" instance=ExtResource("6_272bh")]
unique_name_in_owner = true
layout_mode = 1
offset_top = -230.0
offset_bottom = 230.0
